--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@
 # is used in the bar {} block below. ISO 10646 = Unicode
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
-font pango: Terminus 17
+font pango: Mensch 16
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -25,7 +25,7 @@ bindsym Mod1+Return exec qterminal
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run -fn "mononoki-17"
+bindsym Mod1+0 exec dmenu_run -fn "Mensch-18"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -92,7 +92,7 @@ bindsym Mod1+6 workspace 6
 bindsym Mod1+7 workspace 7
 bindsym Mod1+8 workspace 8
 bindsym Mod1+9 workspace 9
-bindsym Mod1+0 workspace 10
+# bindsym Mod1+ workspace 10
 
 bindsym Mod1+Control+l workspace next
 bindsym Mod1+Control+j workspace prev
@@ -107,7 +107,7 @@ bindsym Mod1+Shift+6 move container to workspace 6
 bindsym Mod1+Shift+7 move container to workspace 7
 bindsym Mod1+Shift+8 move container to workspace 8
 bindsym Mod1+Shift+9 move container to workspace 9
-bindsym Mod1+Shift+0 move container to workspace 10
+# bindsym Mod1+Shift+0 move container to workspace 10
 
 # Names of workspaces
 #workspace "1" output LVDS1
@@ -166,35 +166,52 @@ new_window normal
 hide_edge_borders none
 
 
-# variables de colores
-set $bg-color            #262d38
-set $inactive-bg-color   #262d38
-set $text-color          #f0f07D
-set $inactive-text-color #a0a0a0
-set $urgent-bg-color     #E53935
+# Window color settings
+# class                 border  backgr. text    indicator
+client.focused          #4C566A #e0a0fe #2E3440 #EBCB8B   #5E81AC
+client.focused_inactive #2E3440 #4C566A #ECEFF4 #8FBCBB   #434C5E
+client.unfocused        #2E3440 #2E3440 #4C566A #8FBCBB   #3B4252
+client.urgent           #BF616A #BF616A #2E3440 #BF616A   #BF616A
+client.placeholder      #88C0D0 #2E3440 #B48EAD #2E3440   #2E3440
+client.background       #D8DEE9
 
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
-client.urgent $urgent-bg-color $urgent-bg-color $text-color #00ff00
+set $base00 #101218
+set $base01 #1f222d
+set $base02 #252936
+set $base03 #5e81ac  
+set $base04 #C0C5CE
+set $base05 #d1d4e0
+set $base06 #C9CCDB
+set $base07 #ffffff
+set $base08 #ee829f
+set $base09 #f99170
+set $base0A #ffefcc
+set $base0B #a5ffe1
+set $base0C #97e0ff
+set $base0D #97bbf7
+set $base0E #c0b7f9
+set $base0F #fcc09e
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status | i3-keyboard-layout i3status
         #position top
-        font pango: Terminus 19
+        font pango: Mensch 18
+
         colors {
-                background $bg-color
-                separator #757575
-                #                  border             background         text
-                focused_workspace  $bg-color          #909090          $text-color
-                inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-                urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-	height 25
+            separator  $base01
+            background $base01
+            statusline #81a1c1
+              
+            #                   border  background text
+            focused_workspace  $base01 $base01    #81a1c1 
+            active_workspace   $base01 $base02    $base03
+            inactive_workspace $base01 $base01    #4c566a
+            urgent_workspace   $base01 $base01    $base08
+            binding_mode       $base01 #81a1c1    #2e3440
+        }
+        height 30
 }
 
 # GAPS
@@ -210,7 +227,7 @@ gaps outer 10
 
 # editors
 bindsym Mod4+e exec nvim-qt
-bindsym Mod4+Shift+e exec subl3
+bindsym Mod4+Shift+e exec subl
 
 # ide
 bindsym Mod4+i exec qtcreator -style=gtk
@@ -280,7 +297,7 @@ bindsym XF86AudioPrev exec playerctl previous
 
 #exec --no-startup-id nm-applet
 exec parcellite
-exec xrdb /home/snyp/.Xresources
+exec xrdb /home/rksht/.Xresources
 exec sh ~/.fehbg
 exec xcompmgr -c -l0 -t0 -r0 -o.00
 
